--- a/book/datenstrukturen/datenstrukturen_allgemein.ipynb
+++ b/book/datenstrukturen/datenstrukturen_allgemein.ipynb
@@ -17,11 +17,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vier wichtige abstrakte Datentypen\n",
+    "## Vier wichtige abstrakte Datentypen\n",
     "\n",
     "In der Informatik gibt es viele abstrakte Datentypen (ADT) mit unterschiedlichen Anwendungszwecken. Jeder ADT definiert, **was** wir mit Daten tun können, ohne festzulegen, **wie** dies genau implementiert wird. Hier lernst du vier der wichtigsten abstrakten Datentypen kennen: **Listen**, **Stapel**, **Warteschlangen** und **assoziative Arrays**. In den späteren Kapiteln lernst du dann, sie in UMLzu modellieren und die einzelnen Operationen zu implementieren.\n",
     "\n",
-    "#### 1. **Listen**\n",
+    "### Listen\n",
     "\n",
     "Eine **Liste** ist eine *geordnete* Sammlung von Elementen, bei der jedes Element an einer bestimmten Position (Index) steht. Sie ermöglicht das Hinzufügen, Entfernen und Abrufen von Elementen an jeder Position in der Liste. Listen sind flexibel und werden häufig verwendet, wenn die Reihenfolge der Daten wichtig ist oder man schnell auf ein bestimmtes Element zugreifen muss.\n",
     "\n",
@@ -33,31 +33,31 @@
     "**Implementation:** \n",
     "Listen können mithilfe von **Arrays** oder als **verkettete Listen** implementiert werden. Arrays bieten schnellen Zugriff auf jedes Element, sind aber nur mit Tricks verlängerbar, während verkettete Listen beim Einfügen und Entfernen von Elementen flexibler sind. (Das schauen wir uns im Detail in späteren Kapiteln an.)\n",
     "\n",
-    "#### 2. **Stapel (Stack)**\n",
+    "### Stapel (Stack)\n",
     "\n",
     "Ein **Stapel** (engl. *Stack*) ist ein ADT, der nach dem Prinzip **LIFO** (Last In, First Out) funktioniert, was bedeutet, dass das zuletzt hinzugefügte Element als erstes entfernt wird. Stell dir einen Stapel Bücher vor – das zuletzt obenauf gelegte Buch wird zuerst wieder genommen. Stapel werden häufig in Situationen verwendet, in denen es wichtig ist, den Verlauf von Aktionen rückgängig zu machen, wie zum Beispiel beim \"Rückgängig\"-Machen in Textverarbeitungsprogrammen.\n",
     "\n",
     "**Typische Operationen:**\n",
-    "- `Push`: Ein Element auf den Stapel legen.\n",
-    "- `Pop`: Das oberste Element vom Stapel entfernen.\n",
-    "- `Peek`: Das oberste Element ansehen, ohne es zu entfernen.\n",
+    "- `push`: Ein Element auf den Stapel legen.\n",
+    "- `pop`: Das oberste Element vom Stapel entfernen.\n",
+    "- `top`: Das oberste Element ansehen, ohne es zu entfernen.\n",
     "\n",
     "**Implementation:** \n",
     "Ein Stapel kann entweder mit einem **Array** oder einer **verketteten Liste** realisiert werden. Bei der Array-Implementierung wird das letzte Element eines Arrays als oberstes Stack-Element verwendet. (Details in späteren Kapiteln.)\n",
     "\n",
-    "#### 3. **Warteschlangen (Queue)**\n",
+    "### Warteschlangen (Queue)\n",
     "\n",
     "Eine **Warteschlange** (engl. *Queue*) funktioniert nach dem Prinzip **FIFO** (First In, First Out), d. h. das erste hinzugefügte Element wird als erstes entfernt. Ein praktisches Beispiel ist eine Warteschlange im Supermarkt: Der Kunde, der zuerst in die Schlange tritt, wird auch als erstes bedient. Warteschlangen werden oft verwendet, um Aufgaben oder Prozesse in der Reihenfolge zu verarbeiten, in der sie eintreffen, zum Beispiel in Druckaufträgen oder beim Netzwerkdatenverkehr.\n",
     "\n",
     "**Typische Operationen:**\n",
-    "- `Enqueue`: Ein Element ans Ende der Warteschlange hinzufügen.\n",
-    "- `Dequeue`: Das erste Element aus der Warteschlange entfernen.\n",
-    "- `Peek`: Das erste Element ansehen, ohne es zu entfernen.\n",
+    "- `enqueue`: Ein Element ans Ende der Warteschlange hinzufügen.\n",
+    "- `dequeue`: Das erste Element aus der Warteschlange entfernen.\n",
+    "- `peek`: Das erste Element ansehen, ohne es zu entfernen.\n",
     "\n",
     "**Implementation:** \n",
     "Eine Warteschlange kann ebenfalls mit einem **Array** oder einer **verketteten Liste** implementiert werden. Für eine effizientere Umsetzung kann eine **zirkuläre Warteschlange** verwendet werden, um Speicherplatz zu sparen. (Wir werden aber nur die Implementation als verkettete Liste nutzen.)\n",
     "\n",
-    "#### 4. **Assoziative Arrays (auch: Dictionary/Map)**\n",
+    "### Assoziative Arrays (auch: Dictionary/Map)\n",
     "\n",
     "```{margin}\n",
     "In Python heißen assoziative Arrays `dict` und sind einer der meistgenutzten Datentypen. Wirklich super praktisch!\n",
