--- a/book/datenstrukturen/verkettete_listen.ipynb
+++ b/book/datenstrukturen/verkettete_listen.ipynb
@@ -4,115 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verkettete Listen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Der abstrakte Datentyp *Liste*\n",
-    "Listen sind in der Informatik allgegenwärtig. Man nutzt sie immer, wenn für die Verarbeitung von Daten wichtig ist, in welcher *Reihenfolge* sie vorliegen bzw. an welcher genauen *Position* (*Index*) ein bestimmter Wert steht. \n",
+    "## Verkettete Listen \n",
     "\n",
-    "Die wichtigsten Operationen von Listen sind in {numref}`fig_kd_liste_adt_interface` aufge*list*et 😉:\n",
-    "\n",
-    "```{figure} bilder/kd_liste_adt_interface_fosa.svg\n",
-    "---\n",
-    "width: 30%\n",
-    "name: fig_kd_liste_adt_interface\n",
-    "align: center\n",
-    "---\n",
-    "Der abstrakte Datentyp *Liste* als UML-Klassendiagramm (FoSa 4.3.2)\n",
-    "```\n",
-    "\n",
-    "Als *Benutzer* des Listen-Typs wollen wir gar nicht unbedingt wissen, wie eine Liste intern implementiert ist; es reicht, dass sie sich garantiert so verhält, wie wir es erwarten. Z.B. erwarten wir, dass nach den Operationen\n",
-    "\n",
-    "```\n",
-    "namen = [\"Zora\", \"Xenia\", \"Willi\"]\n",
-    "namen.anhaengen(\"Vito\")\n",
-    "namen.einfuegen(1, \"Yannick\")\n",
-    "namen.entfernen(\"Zora\")\n",
-    "namen.einfuegenVorne(\"Alex\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "die Liste so aussieht:\n",
-    "\n",
-    "```{admonition} Resultierende Liste (Welches Ergebnis erwartest du?)\n",
-    ":class: tip, dropdown\n",
-    "`['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']`\n",
-    "```\n",
-    "\n",
-    "### Listen in Python\n",
-    "Auch bei den Datentypen, die von einer Programmiersprache oder eine Bibliothek bereitgestellt werden, interessiert uns v.a., was wir damit tun können, nicht wie sie intern implementiert sind. Wir wissen z.B., dass der Datentyp `list` in Python Methoden wie `append`, `insert`, `remove`, `index` usw. bereitstellt. Damit können wir das Pseudocode-Beispiel von oben nachbauen.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Zora', 'Xenia', 'Willi']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# AUFGABE: Setze das obige Pseudocode-Beispiel in Python um, so dass\n",
-    "# die korrekte Ausgabe erzeugt wird.\n",
-    "\n",
-    "namen = [\"Zora\", \"Xenia\", \"Willi\"]\n",
-    "# HIER ERGÄNZEN\n",
-    "\n",
-    "print(namen)  # Erwartete Ausgabe: ['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lösung:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# LÖSUNG: Setze das obige Pseudocode-Beispiel in Python um, so dass\n",
-    "# die korrekte Ausgabe erzeugt wird.\n",
-    "namen = [\"Zora\", \"Xenia\", \"Willi\"]\n",
-    "namen.append(\"Vito\")\n",
-    "namen.insert(1, \"Yannick\")\n",
-    "namen.remove(\"Zora\")\n",
-    "namen.insert(0, \"Alex\")\n",
-    "\n",
-    "print(namen)  # Erwartete Ausgabe: ['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Verkettete Liste \n",
-    "\n",
-    "Es gibt zwei gebräuchliche Methoden, um den ADT Liste zu implementieren:\n",
+    "Es gibt zwei gebräuchliche *Datenstrukturen*, mit denen man den ADT Liste implementieren kann:\n",
     "\n",
     "1. Verkettete Liste\n",
     "2. Array (hierbei muss berücksichtigt werden, dass die Größe des Arrays begrenzt ist und\n",
@@ -166,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "(sec:verkettete_listen-uml)=\n",
     "### Verkettete Listen in UML\n",
     "\n",
     "Das Klassendiagramm  {numref}`fig_kd_verkettete_liste` zeigt, wie man die verkettete Liste in UML modelliert. Du siehst, dass zwei Klassen verwendet werden, *VerketteteListe* und *Knoten*. Die Klasse *VerketteteListe* speichert eine Referenz auf den *ersten* Knoten (den **Listenkopf**) und enthält all die Methoden aus dem ADT Liste, wie Hinzufügen, Entfernen und Suchen von Elementen. \n",
@@ -305,117 +199,6 @@
    "metadata": {},
    "source": [
     "Wenn du verstanden hast, warum die Lösung so - und nur so! - funktioniert, bist du bereit, die weiteren Operationen von Listen zu implementieren!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Listenoperationen implementieren\n",
-    "Die ersten beiden Operationen, die du implementieren sollst, sind `ist_leer` und `anzahl_elemente` (s. {numref}`fig_kd_verkettete_liste`).\n",
-    "\n",
-    "Automatische Tests werden dir dabei helfen, deine Implementierungen zu überprüfen. Das funktioniert so:\n",
-    "\n",
-    "- In der folgenden Zelle findet du den Code für die Klasse `VerketteteListe`, den wir bisher entwickelt haben sowie die beiden noch unvollständigen Methoden `ist_leer` und `anzahl_elemente`.\n",
-    "- Am Ende der Zelle werden Tests definiert. Diese musst du gar nicht genau anschauen; es reicht, wenn du die Zelle ausführst und genau anschaust, was die Tests ausgeben.\n",
-    "- Verbessere deinen Code, bis alle Tests korrekt durchlaufen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mögen die Tests beginnen!\n",
-      "Teste Methode ist_leer()...\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Fehler: Leere Liste wird nicht als leer erkannt.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 65\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m ergebnis \u001b[38;5;241m==\u001b[39m korrekt, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFehler: Die korrekte Anzahl der Elemente in der Liste ist \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkorrekt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, aber die Methode gibt \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mergebnis\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m zurück.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMögen die Tests beginnen!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 65\u001b[0m teste_ist_leer()\n\u001b[1;32m     66\u001b[0m teste_anzahl_elemente()\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSuper! Alle Tests wurden bestanden. Gratuliere!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[12], line 48\u001b[0m, in \u001b[0;36mteste_ist_leer\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTeste Methode ist_leer()...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m leere_liste \u001b[38;5;241m=\u001b[39m VerketteteListe()\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m leere_liste\u001b[38;5;241m.\u001b[39mist_leer() \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFehler: Leere Liste wird nicht als leer erkannt.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     49\u001b[0m liste \u001b[38;5;241m=\u001b[39m beispiel_liste()\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m liste\u001b[38;5;241m.\u001b[39mist_leer() \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFehler: Liste mit Elementen wird als leer bezeichnet.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Fehler: Leere Liste wird nicht als leer erkannt."
-     ]
-    }
-   ],
-   "source": [
-    "class VerketteteListe:\n",
-    "    def __init__(self):\n",
-    "        self.erster: Knoten|None = None   # Der erste Knoten in der Liste (Listenkopf)    \n",
-    "\n",
-    "    def __str__(self) -> str:\n",
-    "        \"\"\" Gibt die Liste als Zeichenkette, getrennt durch Pfeile, zurück. \"\"\"\n",
-    "        inhalte = []\n",
-    "        knoten = self.erster\n",
-    "        while knoten is not None:\n",
-    "            inhalte.append(knoten.inhalt)\n",
-    "            knoten = knoten.naechster\n",
-    "        return \" -> \".join(inhalte)\n",
-    "\n",
-    "    def einfuegen_vorne(self, pInhalt):\n",
-    "        \"\"\"Fügt einen neuen Knoten mit pInhalt am Anfang der Liste ein.\"\"\"\n",
-    "        neu = Knoten(pInhalt)   # \"Verpacke\" den Inhalt in einen Knoten\n",
-    "        neu.naechster = self.erster  # Nachfolger des neuen Knotens ist der bisherige Listenkopf\n",
-    "        self.erster = neu  # Der neue Knoten ist ab jetzt der Listenkopf\n",
-    "\n",
-    "   # AUFGABE: Implementiere die folgenden Methoden für die Klasse VerketteteListe:\n",
-    "    \n",
-    "    def ist_leer(self) -> bool:\n",
-    "        \"\"\"gibt True zurück, wenn die Liste leer ist, sonst False\"\"\"\n",
-    "        # HIER ERGÄNZEN\n",
-    "\n",
-    "    def anzahl_elemente(self) -> int:\n",
-    "        \"\"\"gibt die Anzahl der Elemente in der Liste zurück\"\"\"\n",
-    "        # HIER ERGÄNZEN\n",
-    "    \n",
-    "\n",
-    "\n",
-    "# Mit den folgenden Tests kannst du deine Implementierung überprüfen.\n",
-    "# Führe einfach diese Zelle aus, um die Tests zu starten.\n",
-    "\n",
-    "def beispiel_liste() -> VerketteteListe:\n",
-    "    # print(\"Liste vorbereiten\")\n",
-    "    test_liste = VerketteteListe()\n",
-    "    test_liste.einfuegen_vorne(\"Anna\")   # Diese Methode existiert schon\n",
-    "    test_liste.einfuegen_vorne(\"Bibi\")\n",
-    "    test_liste.einfuegen_vorne(\"Coco\")\n",
-    "    test_liste.einfuegen_vorne(\"Dina\")\n",
-    "    # print(\"Die Liste sieht am Anfang so aus:\", test_liste)\n",
-    "    return test_liste\n",
-    "\n",
-    "def teste_ist_leer():\n",
-    "    print(\"Teste Methode ist_leer()...\")\n",
-    "    leere_liste = VerketteteListe()\n",
-    "    assert leere_liste.ist_leer() == True, \"Fehler: Leere Liste wird nicht als leer erkannt.\"\n",
-    "    liste = beispiel_liste()\n",
-    "    assert liste.ist_leer() == False, \"Fehler: Liste mit Elementen wird als leer bezeichnet.\"\n",
-    "    print(\"Test für ist_leer() erfolgreich beendet.\") \n",
-    "\n",
-    "def teste_anzahl_elemente():\n",
-    "    print(\"Teste Methode anzahl_elemente()...\")\n",
-    "    leere_liste = VerketteteListe()\n",
-    "    korrekt = 0\n",
-    "    ergebnis = leere_liste.anzahl_elemente()\n",
-    "    assert ergebnis == korrekt, f\"Fehler: Die korrekte Anzahl der Elemente in einer leeren Liste ist 0, aber die Methode gibt {ergebnis} zurück.\"    \n",
-    "    liste = beispiel_liste()\n",
-    "    korrekt = 4\n",
-    "    ergebnis = liste.anzahl_elemente()\n",
-    "    assert ergebnis == korrekt, f\"Fehler: Die korrekte Anzahl der Elemente in der Liste ist {korrekt}, aber die Methode gibt {ergebnis} zurück.\"\n",
-    "\n",
-    "print(\"Mögen die Tests beginnen!\")\n",
-    "teste_ist_leer()\n",
-    "teste_anzahl_elemente()\n",
-    "print(\"Super! Alle Tests wurden bestanden. Gratuliere!\")\n",
-    "\n"
    ]
   }
  ],
