--- a/book/datenstrukturen/verkettete_listenTODO.ipynb
+++ b/book/datenstrukturen/verkettete_listenTODO.ipynb
@@ -17,11 +17,14 @@
     "- OD vorgeben -> Mit welchen Aktionen kann man das erzeugen?\n",
     "- OD zeichnen\n",
     "- Pseudocode für Operation entfernenVorne oder entfernen(index)\n",
+    "- Python-Umsetzung mit Tests\n",
     "\n",
     "\n",
     "TODO\n",
+    "- Der Link zum Repository funktioniert immer noch nicht -> \n",
     "- make deploy: per scp oder besser per rsync (s. chatgpt)\n",
-    "- "
+    "- Video einbauen\n",
+    "- Python-Tutor für Animation"
    ]
   },
   {
