Stapel und Warteschlange

--- a/book/datenstrukturen/verkettete_listen.ipynb
+++ b/book/datenstrukturen/verkettete_listen.ipynb
@@ -27,7 +27,7 @@
     "Verkettete Liste oder Polonaise?\n",
     "```\n",
     "\n",
-    "Eine verketette Liste besteht aus **Knoten**. Jeder Knoten enthält einen **Inhalt** (z.B. eine Zahl oder\n",
+    "Eine verkettete Liste besteht aus **Knoten**. Jeder Knoten enthält einen **Inhalt** (z.B. eine Zahl oder\n",
     "einen String) und eine **Referenz** auf den *nächsten* Knoten.\n",
     "\n",
     "Beispiel:\n",
@@ -63,7 +63,12 @@
     "(sec:verkettete_listen-uml)=\n",
     "### Verkettete Listen in UML\n",
     "\n",
+    "#### Klassendiagramm\n",
     "Das Klassendiagramm  {numref}`fig_kd_verkettete_liste` zeigt, wie man die verkettete Liste in UML modelliert. Du siehst, dass zwei Klassen verwendet werden, *VerketteteListe* und *Knoten*. Die Klasse *VerketteteListe* speichert eine Referenz auf den *ersten* Knoten (den **Listenkopf**) und enthält all die Methoden aus dem ADT Liste, wie Hinzufügen, Entfernen und Suchen von Elementen. \n",
+    "\n",
+    "```{margin}\n",
+    "Die Angabe `<Typ>` bezeichnet einen **generischen** Datentyp. Das bedeutet: Jede Liste speichert Daten eines konkreten Datentyps, z.B. `GZ`, `Text` oder `Mitarbeiter`. Überall wo im Diagramm `<Typ>` steht, wird das durch diese konkrete Klasse ersetzt. Eine `VerketteteListe<Text>` speichert also `Text`-Objekte und verwaltet diese mithilfe von `Knoten<Text>`-Objekten, usw. \n",
+    "```\n",
     "\n",
     "```{figure} bilder/kd_verkettete_liste_fosa.svg\n",
     "---\n",
@@ -74,7 +79,37 @@
     "Klassendiagramm für die Datenstruktur *Verkettete Liste* (FoSa 5.1)\n",
     "```\n",
     "\n",
-    "Die eigentliche Arbeit der Datenstruktur erfolgt in der Klasse *Knoten*, die ein einzelnes Listenelement darstellt. Jeder Knoten enthält sowohl einen Inhalt als auch eine Referenz auf den nächsten Knoten. Es handelt sich hier also um eine Assoziation der Klasse Knoten *mit sich selbst*  (von Knoten zu Knoten). Man spricht hierbei von einer *reflexiven* Assoziation."
+    "\n",
+    "Die eigentliche Arbeit der Datenstruktur erfolgt in der Klasse *Knoten*, die ein einzelnes Listenelement darstellt. Jeder Knoten enthält sowohl einen Inhalt als auch eine Referenz auf den nächsten Knoten. Es handelt sich hier also um eine Assoziation der Klasse Knoten *mit sich selbst*  (von Knoten zu Knoten). Man spricht hierbei von einer *reflexiven* Assoziation.\n",
+    "\n",
+    "**Beispiel:** In einer betriebswirtschaftlichen Software wird die Klasse `Mitarbeiter` verwendet. Jedes `Mitarbeiter`-Objekt speichert die Daten *eines* Angestellten. Um z.B. alle Mitarbeiter einer Abteilung zu verwalten, benötigt man eine *Liste* von `Mitarbeiter`-Objekten. Das konkrete Klassendiagramm sieht dann so aus: \n",
+    "\n",
+    "```{figure} bilder/KD_Mitarbeiter_VerketteteListe.svg \n",
+    "---\n",
+    "width: 80%\n",
+    "name: fig_kd_mitarbeiter_verketteteliste\n",
+    "align: center\n",
+    "---\n",
+    "Klassendiagramm: Verkettete Liste von Mitarbeitern\n",
+    "```\n",
+    "\n",
+    "#### Objektdiagramm\n",
+    "```{important}\n",
+    "Achtung: Dass die *Klasse* Knoten eine Assoziation mit sich selbst hat, bedeutet nicht, dass auch die einzelnen *Objekte* mit sich selbst assoziiert sind. Stattdessen ergibt sich im Objektdiagramm eine\n",
+    "*Kette* von Objekten.\n",
+    "```\n",
+    "\n",
+    "**Beispiel:** Frau Maier, Herr Müller und Herr Schmidt arbeiten in der (streng geheimen) Abteilung 42. Alle Mitarbeiter der Abteilung sind in einer (ebenfalls streng geheimen) Liste gespeichert. Es ergibt sich folgendes Objektdiagramm:\n",
+    "\n",
+    "```{figure} bilder/OD_Mitarbeiter_VerketteteListe.svg\n",
+    "---\n",
+    "width: 100%\n",
+    "name: fig_od_mitarbeiter_verketteteliste\n",
+    "align: center\n",
+    "---\n",
+    "Objektdiagramm: Liste von Mitarbeitern der geheimnisvollen Abteilung 42\n",
+    "```\n",
+    "\n"
    ]
   },
   {
