--- a/book/datenstrukturen/stack.ipynb
+++ b/book/datenstrukturen/stack.ipynb
@@ -95,14 +95,33 @@
     "1. Nimm nacheinander die Bücher vom ursprünglichen Stapel `st1` und lege sie auf einen zweiten Stapel `st2`. Das machst du so lange, bis du das gesuchte Buch erreicht hast.\n",
     "2. Entferne das gesuchte Buch aus `st1`.\n",
     "3. Danach nimmst du die Bücher vom zweiten Stapel `st2` wieder herunter und legst sie zurück auf den ursprünglichen Stapel `st1`. So stellst du den Stapel fast wieder in seinen ursprünglichen Zustand her – nur das gewünschte Buch fehlt jetzt.\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Aufgabe 4: Ist der Term korrekt geklammert?\n",
     "Gegeben sei der Ausdruck `5 + (3 * (2 + 1))) - (4 / (6 + 2) + 7`. Bestimme, ob die Klammern korrekt geöffnet und geschlossen wurden. Beschreibe, wie ein Stack `st` verwendet werden kann, um dies zu überprüfen.\n",
     "\n",
-    "```{admonition} Lösung\n",
+    "````{admonition} Lösung\n",
     ":class: tip, dropdown\n",
     "Der Ausdruck im Beispiel ist *nicht* korrekt geklammert. Nach dem Teil \"2 + 1\" werden drei Klammern geschlossen, obwohl bis dahin erst zwei geöffnet wurden.\n",
+    "\n",
+    "Grundidee für die allgemeine Lösung:\n",
+    "- Gehe den Ausdruck von links nach rechts durch. Ignoriere dabei alle Zahlen und betrachte nur die Klammern.\n",
+    "- Öffnende Klammern werden auf den Stack gelegt.\n",
+    "- Wenn du auf eine schließende Klammer triffst, nimmst du die oberste (öffnende) Klammer vom Stack.\n",
+    "- Wenn am Schluss der Stack wieder leer ist, ist der Ausdruck korrekt geklammert.\n",
+    "\n",
+    "Wenn der Ausdruck *nicht* korrekt geklammert ist, kann dabei an verschiedenen Stellen etwas schiefgehen. Überlege wo!\n",
+    "\n",
+    "Wenn du das Verfahren noch genauer verstehen willst, klappe die detaillierte Lösung auf:\n",
+    "\n",
+    "```{admonition} Lösung 2\n",
+    ":class: tip, dropdown\n",
     "\n",
     "Allgemein kann man eine solche Überprüfung wie folgt durchführen:  \n",
     "1. Gehe den Ausdruck von links nach rechts durch.\n",
@@ -115,7 +134,10 @@
     "   - **Falls der Stack nicht leer ist**, gibt es mehr öffnende Klammern als schließende, und der Ausdruck ist **nicht korrekt geklammert**.\n",
     "   - **Ist der Stack leer**, sind alle Klammern korrekt geöffnet und geschlossen. Der Ausdruck ist somit korrekt geklammert.\n",
     "```\n",
-    "\n"
+    "\n",
+    "Wenn dir das Prinzip klar ist, kannst du jetzt bestimmt auch das Parsons-Problem in der folgenden Aufgabe lösen!\n",
+    "\n",
+    "```` "
    ]
   },
   {
@@ -123,7 +145,9 @@
    "metadata": {},
    "source": [
     "### Korrekte Klammerung in Python (Parsons Problem)\n",
-    "Betrachte noch einmal die vorige Aufgabe. Wie könnte man in einem Programm prüfen, ob ein mathematischer Ausdruck `term` korrekt geklammert ist?"
+    "Betrachte noch einmal die vorige Aufgabe. Wie könnte man in einem Programm prüfen, ob ein mathematischer Ausdruck `term` korrekt geklammert ist?\n",
+    "\n",
+    "Bringe im folgenden Parsons-Problem den Code für die Methode `def ist_korrekt_geklammert(term: str)` in die richtige Reihenfolge:"
    ]
   },
   {
@@ -150,7 +174,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x104f5e010>"
+       "<IPython.lib.display.IFrame at 0x10a35d650>"
       ]
      },
      "execution_count": 2,
@@ -216,6 +240,9 @@
    "metadata": {},
    "source": [
     "## Stapel implementieren\n",
+    "\n",
+    "(sec:stack-implementierungsvarianten)=\n",
+    "### Diskussion: Möglichkeiten einen Stack zu implementieren\n",
     "Im vorigen Absatz hast du gesehen, dass Stapel verketteten Listen recht ähnlich sind. Für die Implementierung haben wir darum nun auch mehrere Möglichkeiten:\n",
     "\n",
     "1. Wir implementieren die Klasse `Stapel` ganz neu, orientieren uns dabei aber natürlich an `VerketteteListe`.\n",
@@ -286,6 +313,276 @@
     "dass sie zusätzlichen Entwicklungsaufwand erfordert und fehleranfällig sein kann, weil du viele Funktionen der `VerketteteListe` doppelt programmieren müsstest.\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variante 1: Stapel neu implementieren"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "25\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Knoten:\n",
+    "    def __init__(self, inhalt, naechster=None):  # Wenn für naechster kein Wert angegeben wird, ist er None (Standardwert)\n",
+    "        self.inhalt = inhalt\n",
+    "        self.naechster = naechster\n",
+    "\n",
+    "class Stapel:\n",
+    "    def __init__(self):\n",
+    "        self.anfang: Knoten|None = None\n",
+    "\n",
+    "    def push(self, daten):\n",
+    "        \"\"\"legt ein neues Element auf den Stapel\"\"\"\n",
+    "        neuer_knoten = Knoten(daten, self.anfang)  # Der neue Knoten zeigt auf den bisherigen Anfang\n",
+    "        self.anfang = neuer_knoten  # Der neue Knoten ist jetzt der Anfang\n",
+    "\n",
+    "    def pop(self):\n",
+    "        \"\"\"entfernt das oberste Element vom Stapel und gibt es zurück\"\"\"\n",
+    "        if self.anfang is None:\n",
+    "            raise IndexError(\"Pop-Operation auf leerem Stapel nicht möglich\")\n",
+    "        inhalt = self.anfang.inhalt  # Inhalt des ersten Knotens merken\n",
+    "        self.anfang = self.anfang.naechster  # Anfang auf den nächsten Knoten setzen\n",
+    "        return inhalt\n",
+    "\n",
+    "    def top(self):\n",
+    "        \"\"\"gibt das oberste Element zurück, ohne es zu entfernen\"\"\"\n",
+    "        if self.anfang is None:\n",
+    "            raise IndexError(\"Top-Operation auf leerem Stapel nicht möglich\")\n",
+    "        return self.anfang.inhalt\n",
+    "\n",
+    "    def ist_leer(self):\n",
+    "        \"\"\"gibt True zurück, wenn der Stapel leer ist, sonst False\"\"\"\n",
+    "        return self.anfang is None  # Kurzform für if self.anfang is None: return True else: return False\n",
+    "    \n",
+    "    def anzahl_elemente(self):\n",
+    "        \"\"\"gibt die Anzahl der Elemente auf dem Stapel zurück\"\"\"\n",
+    "        # ACHTUNG: Diese Methode ist ineffizient, da sie die gesamte interne Liste durchlaufen muss!\n",
+    "        anzahl = 0\n",
+    "        knoten = self.anfang\n",
+    "        while knoten is not None:\n",
+    "            anzahl += 1\n",
+    "            knoten = knoten.naechster\n",
+    "        return anzahl\n",
+    "\n",
+    "\n",
+    "# Beispielverwendung\n",
+    "st = Stapel()\n",
+    "st.push(5)\n",
+    "st.push(10)\n",
+    "print(st.pop())  # Ausgabe: 10\n",
+    "st.push(20)\n",
+    "st.push(15)\n",
+    "print(st.pop())  # Ausgabe: 15\n",
+    "st.push(25)\n",
+    "print(st.top())  # Ausgabe: 25\n",
+    "print(st.ist_leer())  # Ausgabe: False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variante 2: Vererbung (schlechte Idee!)\n",
+    "\n",
+    "````{warning}\n",
+    "Die Variante, dass `Stapel` von `VerketteteListe` erbt (oder gar umgekehrt), ist eine *schlechte* Idee(s. {ref}`sec:stack-implementierungsvarianten`). Deswegen zeigen wir sie hier auch erst gar nicht!\n",
+    "````\n",
+    "\n",
+    "### Variante 3: Stapel nutzt intern eine verkettete Liste (Komposition)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Diese Zelle kannst du ausblenden, sie enthält nur unseren alten Code für Verkettete Listen\n",
+    "\n",
+    "from __future__ import annotations  \n",
+    "from typing import Any\n",
+    "\n",
+    "class Knoten:\n",
+    "    def __init__(self, inhalt):\n",
+    "        \"\"\" Konstruktor für die Klasse Knoten: speichert den Inhalt und legt\n",
+    "        eine Referenz auf den nächsten Knoten an. \"\"\"\n",
+    "        self.inhalt: Any = inhalt   # Any = inhalt kann beliebiger Datentyp sein\n",
+    "        self.naechster: Knoten|None = None    # Typ-Annotation: naechster ist ein Knoten oder None\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return str(self.inhalt)\n",
+    "    \n",
+    "class VerketteteListe:\n",
+    "    def __init__(self):\n",
+    "        self.erster: Knoten|None = None   # Der erste Knoten in der Liste (Listenkopf)    \n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        \"\"\" Gibt die Liste als Zeichenkette, getrennt durch Pfeile, zurück. \"\"\"\n",
+    "        inhalte = []\n",
+    "        knoten = self.erster\n",
+    "        while knoten is not None:\n",
+    "            inhalte.append(knoten.inhalt)\n",
+    "            knoten = knoten.naechster\n",
+    "        return \" -> \".join(inhalte)\n",
+    "\n",
+    "    def einfuegen_vorne(self, pInhalt):\n",
+    "        \"\"\"Fügt einen neuen Knoten mit pInhalt am Anfang der Liste ein.\"\"\"\n",
+    "        neu = Knoten(pInhalt)   # \"Verpacke\" den Inhalt in einen Knoten\n",
+    "        neu.naechster = self.erster  # Nachfolger des neuen Knotens ist der bisherige Listenkopf\n",
+    "        self.erster = neu  # Der neue Knoten ist ab jetzt der Listenkopf\n",
+    "    \n",
+    "    def ist_leer(self) -> bool:\n",
+    "        \"\"\"gibt True zurück, wenn die Liste leer ist, sonst False\"\"\"\n",
+    "        if self.erster is None:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def anzahl_elemente(self) -> int:\n",
+    "        \"\"\"gibt die Anzahl der Elemente in der Liste zurück\"\"\"\n",
+    "        anzahl = 0\n",
+    "        aktuell = self.erster\n",
+    "        while aktuell is not None:\n",
+    "            anzahl += 1\n",
+    "            aktuell = aktuell.naechster\n",
+    "        return anzahl\n",
+    "    \n",
+    "    def gib_inhalt(self, index: int) -> Any:\n",
+    "        \"\"\"gibt den Inhalt des Knotens an der Stelle index zurück\"\"\"\n",
+    "        if self.erster is None:\n",
+    "            return None\n",
+    "        aktuell = self.erster\n",
+    "        for i in range(index):\n",
+    "            if aktuell.naechster is None:\n",
+    "                return None\n",
+    "            aktuell = aktuell.naechster\n",
+    "        return aktuell.inhalt\n",
+    "    \n",
+    "    def ersetzen(self, index: int, neuer_inhalt: Any) -> None:\n",
+    "        \"\"\"ersetzt den Inhalt des Knotens an der Stelle index durch neuer_inhalt\"\"\"\n",
+    "        if self.erster is None:\n",
+    "            return None\n",
+    "        aktuell: Knoten = self.erster \n",
+    "        for i in range(index):\n",
+    "            if aktuell.naechster is None:\n",
+    "                return\n",
+    "            aktuell = aktuell.naechster\n",
+    "        aktuell.inhalt = neuer_inhalt\n",
+    "\n",
+    "    def enthaelt(self, inhalt: Any) -> bool:\n",
+    "        \"\"\"gibt True zurück, wenn inhalt in der Liste enthalten ist, sonst False\"\"\"\n",
+    "        aktuell = self.erster\n",
+    "        while aktuell is not None:\n",
+    "            if aktuell.inhalt == inhalt:\n",
+    "                return True\n",
+    "            aktuell = aktuell.naechster\n",
+    "        return False\n",
+    "    \n",
+    "    def anhaengen(self, inhalt: Any) -> None:\n",
+    "        \"\"\"hängt einen neuen Knoten mit dem Inhalt inhalt ans Ende der Liste an\"\"\"\n",
+    "        neu = Knoten(inhalt)\n",
+    "        aktuell = self.erster\n",
+    "        if aktuell is None:\n",
+    "            self.erster = neu\n",
+    "            return\n",
+    "        while aktuell.naechster is not None:\n",
+    "            aktuell = aktuell.naechster\n",
+    "        aktuell.naechster = neu\n",
+    "           \n",
+    "    def entfernen_vorne(self) -> Any:\n",
+    "        \"\"\"entfernt den ersten Knoten und gibt dessen Inhalt zurück\"\"\"\n",
+    "        if self.erster is None:\n",
+    "            return None\n",
+    "        inhalt = self.erster.inhalt\n",
+    "        self.erster = self.erster.naechster\n",
+    "        return inhalt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "25\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stapel:\n",
+    "    def __init__(self):\n",
+    "        # Wir verwenden eine VerketteteListe als interne Datenstruktur und\n",
+    "        # lassen diese die eigentliche Arbeit machen.\n",
+    "        # Komposition: Die Klasse Stapel besteht aus einer VerkettetenListe bzw.\n",
+    "        # steht mit VerketteteListe in einer \"Has-A\"-Beziehung.\n",
+    "\n",
+    "        self._hilfsliste = VerketteteListe()\n",
+    "\n",
+    "    def push(self, inhalt: Any) -> None:\n",
+    "        \"\"\"legt ein neues Element inhalt auf den Stapel\"\"\"\n",
+    "        self._hilfsliste.einfuegen_vorne(inhalt)  # Arbeit wird an die Hilfsliste delegiert\n",
+    "\n",
+    "    def pop(self) -> Any:\n",
+    "        \"\"\"entfernt das oberste Element vom Stapel und gibt es zurück\"\"\"\n",
+    "        if self.ist_leer():\n",
+    "            raise IndexError(\"Pop-Operation auf leerem Stapel nicht möglich\")\n",
+    "        return self._hilfsliste.entfernen_vorne()  # Arbeit wird an die Hilfsliste delegiert\n",
+    "\n",
+    "    def top(self) -> Any:\n",
+    "        \"\"\"gibt das oberste Element des Stapels zurück, ohne es zu entfernen\"\"\"\n",
+    "        if self.ist_leer():\n",
+    "            raise IndexError(\"Top-Operation auf leerem Stapel nicht möglich\")\n",
+    "        return self._hilfsliste.gib_inhalt(0)  # Arbeit wird an die Hilfsliste delegiert\n",
+    "\n",
+    "    def ist_leer(self) -> bool:\n",
+    "        \"\"\"gibt True zurück, wenn der Stapel leer ist, sonst False\"\"\"\n",
+    "        return self._hilfsliste.ist_leer()  # Arbeit wird an die Hilfsliste delegiert\n",
+    "\n",
+    "    def anzahl_elemente(self):\n",
+    "        \"\"\"gibt die Anzahl der Elemente auf dem Stapel zurück\"\"\"\n",
+    "        # ACHTUNG: Diese Methode ist ineffizient, da sie die gesamte interne Liste durchlaufen muss!\n",
+    "        return self._hilfsliste.anzahl_elemente()\n",
+    "\n",
+    "\n",
+    "# Beispielverwendung\n",
+    "st = Stapel()\n",
+    "st.push(5)\n",
+    "st.push(10)\n",
+    "print(st.pop())  # Ausgabe: 10\n",
+    "st.push(20)\n",
+    "st.push(15)\n",
+    "print(st.pop())  # Ausgabe: 15\n",
+    "st.push(25)\n",
+    "print(st.top())  # Ausgabe: 25\n",
+    "print(st.ist_leer())  # Ausgabe: False"
    ]
   }
  ],
