--- a/book/datenstrukturen/verkettete_liste_operationen2.ipynb
+++ b/book/datenstrukturen/verkettete_liste_operationen2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -46,11 +46,14 @@
     "        self.anzahl_tests = len(tests)\n",
     "        self.bestandene_tests = 0\n",
     "\n",
-    "    def erfolgreicher_test(self, methodenname):\n",
+    "    def erfolgreicher_test(self, methodenname, anzahl_tests=None):\n",
+    "        if anzahl_tests is not None:\n",
+    "            self.anzahl_tests = anzahl_tests\n",
     "        self.bestandene_tests += 1\n",
     "        print(f\"  {methodenname} war erfolgreich. Aktuelle Punktzahl: {self.bestandene_tests}/{self.anzahl_tests}\")\n",
     "\n",
     "    def fuehre_tests_aus(self, reihenfolge: list[str]):\n",
+    "        anzahl_tests = len(reihenfolge)\n",
     "        print(\"Mögen die Tests beginnen!\")\n",
     "        for test_name in reihenfolge:\n",
     "            test_name = \"teste_\" + test_name\n",
@@ -63,9 +66,9 @@
     "            try:\n",
     "                test_methode()\n",
     "            except AssertionError as e:\n",
-    "                print(f\"  {test_name} fehlgeschlagen: {e}\")\n",
+    "                print(f\"!!! {test_name} fehlgeschlagen: {e}\")\n",
     "                break\n",
-    "            self.erfolgreicher_test(test_name)\n",
+    "            self.erfolgreicher_test(test_name, anzahl_tests)\n",
     "        if self.bestandene_tests == self.anzahl_tests:\n",
     "            print(\"\\nHerzlichen Glückwunsch! Alle Tests erfolgreich.\")\n",
     "        else:\n",
@@ -95,54 +98,124 @@
     "        liste = self.beispiel_liste()\n",
     "        korrekt = 4\n",
     "        ergebnis = liste.anzahl_elemente()\n",
-    "        assert ergebnis == korrekt, f\"Die korrekte Anzahl der Elemente in der Liste ist {korrekt}, aber deine Methode gibt {ergebnis} zurück.\"\n",
+    "        assert ergebnis == korrekt, f\"Test mit Liste '{liste}'\\nDie korrekte Anzahl der Elemente in der Liste ist {korrekt}, aber deine Methode gibt {ergebnis} zurück.\"\n",
     "\n",
     "    def teste_gib_inhalt(self):\n",
     "        liste = self.beispiel_liste()\n",
     "        erwartet = \"Dina\"\n",
     "        erhalten = liste.gib_inhalt(0)\n",
-    "        assert erhalten == erwartet, f\"Das erste Element sollte {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nDas erste Element sollte {erwartet} sein, ist aber {erhalten}.\"\n",
     "        erwartet = \"Coco\"\n",
     "        erhalten = liste.gib_inhalt(1)\n",
-    "        assert erhalten == erwartet, f\"Das zweite Element sollte {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nDas zweite Element sollte {erwartet} sein, ist aber {erhalten}.\"\n",
     "        erwartet = \"Anna\"\n",
     "        erhalten = liste.gib_inhalt(3)\n",
-    "        assert erhalten == erwartet, f\"Das letzte Element sollte {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nDas letzte Element sollte {erwartet} sein, ist aber {erhalten}.\"\n",
     "\n",
     "    def teste_ersetzen(self):\n",
     "        liste = self.beispiel_liste()\n",
     "        liste.ersetzen(0, \"Ella\")\n",
     "        erwartet = \"Ella -> Coco -> Bibi -> Anna\"\n",
     "        erhalten = str(liste)\n",
-    "        assert erhalten == erwartet, f\"Nach dem Ersetzen des ersten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Ersetzen des ersten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
     "        liste.ersetzen(1, \"Fiona\")\n",
     "        erwartet = \"Ella -> Fiona -> Bibi -> Anna\"\n",
     "        erhalten = str(liste)\n",
-    "        assert erhalten == erwartet, f\"Nach dem Ersetzen des zweiten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Ersetzen des zweiten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
     "        liste.ersetzen(3, \"Greta\")\n",
     "        erwartet = \"Ella -> Fiona -> Bibi -> Greta\"\n",
     "        erhalten = str(liste)\n",
-    "        assert erhalten == erwartet, f\"Nach dem Ersetzen des letzten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Ersetzen des letzten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
     "\n",
     "    def teste_einfuegen(self):\n",
     "        liste = self.beispiel_liste()  # Dina -> Coco -> Bibi -> Anna\n",
     "        liste.einfuegen(2, \"Cocobibi\")\n",
     "        erwartet = \"Dina -> Coco -> Cocobibi -> Bibi -> Anna\"\n",
     "        erhalten = str(liste)\n",
-    "        assert erhalten == erwartet, f\"Nach dem Einfügen an Position 2 sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Einfügen an Position 2 sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
     "        liste.einfuegen(0, \"Ella\")\n",
     "        erwartet = \"Ella -> Dina -> Coco -> Cocobibi -> Bibi -> Anna\"\n",
     "        erhalten = str(liste)\n",
-    "        assert erhalten == erwartet, f\"Nach dem Einfügen an Position 0 sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Einfügen an Position 0 sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
     "        liste.einfuegen(6, \"Greta\")\n",
     "        erwartet = \"Ella -> Dina -> Coco -> Cocobibi -> Bibi -> Anna -> Greta\"\n",
     "        erhalten = str(liste)\n",
-    "        assert erhalten == erwartet, f\"Nach dem Einfügen an Position 6 sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n"
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Einfügen an Position 6 sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "\n",
+    "    def teste_enthaelt(self):\n",
+    "        liste = self.beispiel_liste()\n",
+    "        assert liste.enthaelt(\"Anna\") == True, f\"Test mit Liste '{liste}'\\nDie Liste enthält das Element 'Anna', aber deine Methode gibt False zurück.\"\n",
+    "        assert liste.enthaelt(\"Bibi\") == True, f\"Test mit Liste '{liste}'\\nDie Liste enthält das Element 'Bibi', aber dfeine Methode gibt False zurück.\"\n",
+    "        assert liste.enthaelt(\"Coco\") == True, f\"Test mit Liste '{liste}'\\nDie Liste enthält das Element 'Coco', aber deine Mfethode gibt False zurück.\"\n",
+    "        assert liste.enthaelt(\"Dina\") == True, f\"Test mit Liste '{liste}'\\nDie Liste enthält das Element 'Dina', aber deine Methodef gibt False zurück.\"\n",
+    "        assert liste.enthaelt(\"Ella\") == False, f\"Test mit Liste '{liste}'\\nDie Liste enthält das Element 'Ella' nicht, aber deine Methodef gibt True zurück.\"\n",
+    "        assert liste.enthaelt(\"Fiona\") == False, f\"Test mit Liste '{liste}'\\nDie Liste enthält das Element 'Fiona' nicht, aber deine Methode gibtf True zurück.\"\n",
+    "\n",
+    "    def teste_anhaengen(self):\n",
+    "        liste = self.beispiel_liste()\n",
+    "        liste.anhaengen(\"Ella\")\n",
+    "        erwartet = \"Dina -> Coco -> Bibi -> Anna -> Ella\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Anhängen sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.anhaengen(\"Fiona\")\n",
+    "        erwartet = \"Dina -> Coco -> Bibi -> Anna -> Ella -> Fiona\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Anhängen sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste = VerketteteListe()\n",
+    "        liste.anhaengen(\"Anna\")\n",
+    "        erwartet = \"Anna\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Anhängen sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "\n",
+    "    def teste_entfernen(self):\n",
+    "        liste = self.beispiel_liste()\n",
+    "        liste.entfernen(3)\n",
+    "        erwartet = \"Dina -> Coco -> Bibi\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Anna' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.entfernen(1)\n",
+    "        erwartet = \"Dina -> Bibi\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Coco' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.entfernen(0)\n",
+    "        erwartet = \"Bibi\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Dina' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.entfernen(0)\n",
+    "        erwartet = \"\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Bibi' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "\n",
+    "    def teste_entfernen_vorne(self):\n",
+    "        liste = self.beispiel_liste()\n",
+    "        liste.entfernen_vorne()\n",
+    "        erwartet = \"Coco -> Bibi -> Anna\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen des ersten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.entfernen_vorne()\n",
+    "        erwartet = \"Bibi -> Anna\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen des ersten Elements sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "\n",
+    "    def teste_entfernen_inhalt(self):\n",
+    "        liste = self.beispiel_liste()\n",
+    "        liste.entfernen_inhalt(\"Coco\")\n",
+    "        erwartet = \"Dina -> Bibi -> Anna\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Coco' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.entfernen_inhalt(\"Anna\")\n",
+    "        erwartet = \"Dina -> Bibi\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Anna' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n",
+    "        liste.entfernen_inhalt(\"Dina\")\n",
+    "        erwartet = \"Bibi\"\n",
+    "        erhalten = str(liste)\n",
+    "        assert erhalten == erwartet, f\"Test mit Liste '{liste}'\\nNach dem Entfernen von 'Dina' sollte die Liste {erwartet} sein, ist aber {erhalten}.\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +246,9 @@
      "output_type": "stream",
      "text": [
       "Mögen die Tests beginnen!\n",
-      "Starte Test: teste_einfuegen...\n",
-      "  teste_einfuegen war erfolgreich. Aktuelle Punktzahl: 1/5\n",
-      "Test teste_enthaelt existiert nicht.\n",
-      "Test teste_anhaengen existiert nicht.\n",
-      "Test teste_entfernen existiert nicht.\n",
-      "Test teste_entfernen_vorne existiert nicht.\n",
-      "Test teste_entfernen_inhalt existiert nicht.\n",
+      "Starte Test: teste_enthaelt...\n",
+      "!!! teste_enthaelt fehlgeschlagen: Test mit Liste 'Dina -> Coco -> Bibi -> Anna'\n",
+      "Die Liste enthält das Element 'Anna', aber deine Methode gibt False zurück.\n",
       "\n",
       "Leider waren noch nicht alle Tests erfolgreich. Probiere es noch einmal!\n"
      ]
@@ -245,10 +314,6 @@
     "            knoten = knoten.naechster\n",
     "        knoten.inhalt = neuer_inhalt\n",
     "\n",
-    "    def einfuegen(self, index: int, inhalt: Any) -> None:\n",
-    "        \"\"\"fügt einen neuen Knoten mit inhalt an der Stelle index ein\"\"\"\n",
-    "        ...  # Hier Lösung ergänzen\n",
-    "\n",
     "    def enthaelt(self, inhalt: Any) -> bool:\n",
     "        \"\"\"gibt True zurück, wenn inhalt in der Liste enthalten ist, sonst False\"\"\"\n",
     "        ...  # Hier Lösung ergänzen\n",
@@ -257,12 +322,16 @@
     "        \"\"\"hängt einen neuen Knoten mit dem Inhalt inhalt ans Ende der Liste an\"\"\"\n",
     "        ...  # Hier Lösung ergänzen\n",
     "           \n",
+    "    def entfernen_vorne(self) -> Any:\n",
+    "        \"\"\"entfernt den ersten Knoten und gibt dessen Inhalt zurück\"\"\"\n",
+    "        ...  # Hier Lösung ergänzen\n",
+    "\n",
     "    def entfernen(self, index: int) -> Any:\n",
     "        \"\"\"entfernt den Knoten an der Stelle index und gibt dessen Inhalt zurück\"\"\"\n",
     "        ...  # Hier Lösung ergänzen\n",
     "\n",
-    "    def entfernen_vorne(self) -> Any:\n",
-    "        \"\"\"entfernt den ersten Knoten und gibt dessen Inhalt zurück\"\"\"\n",
+    "    def einfuegen(self, index: int, inhalt: Any) -> None:\n",
+    "        \"\"\"fügt einen neuen Knoten mit inhalt an der Stelle index ein\"\"\"\n",
     "        ...  # Hier Lösung ergänzen\n",
     "\n",
     "    def entfernen_inhalt(self, inhalt: Any) -> None:\n",
@@ -274,7 +343,7 @@
     "# Führe einfach diese Zelle aus, um die Tests zu starten.\n",
     "\n",
     "test = TestsVerketteteListe(VerketteteListe)\n",
-    "reihenfolge = [\"einfuegen\", \"enthaelt\", \"anhaengen\", \"entfernen\", \"entfernen_vorne\", \"entfernen_inhalt\"]\n",
+    "reihenfolge = [\"enthaelt\", \"anhaengen\", \"entfernen_vorne\", \"entfernen\", \"einfuegen\", \"entfernen_inhalt\"]\n",
     "test.fuehre_tests_aus(reihenfolge)"
    ]
   }
