kleine Änderung bei Listen

--- a/book/datenstrukturen/listen_einfuehrung.ipynb
+++ b/book/datenstrukturen/listen_einfuehrung.ipynb
@@ -31,7 +31,7 @@
     "namen = [\"Zora\", \"Xenia\", \"Willi\"]\n",
     "namen.anhaengen(\"Vito\")\n",
     "namen.einfuegen(1, \"Yannick\")\n",
-    "namen.entfernen(\"Zora\")\n",
+    "namen.entfernen(\"Xenia\")\n",
     "namen.einfuegenVorne(\"Alex\")\n",
     "\n",
     "```\n",
@@ -40,7 +40,7 @@
     "\n",
     "```{admonition} Resultierende Liste (Welches Ergebnis erwartest du?)\n",
     ":class: tip, dropdown\n",
-    "`['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']`\n",
+    "`['Alex', 'Zora', 'Yannick', 'Willi', 'Vito']`\n",
     "```\n",
     "\n",
     "### Listen in Python\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
     "namen = [\"Zora\", \"Xenia\", \"Willi\"]\n",
     "# HIER ERGÄNZEN\n",
     "\n",
-    "print(namen)  # Erwartete Ausgabe: ['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']"
+    "print(namen)  # Erwartete Ausgabe: ['Alex', 'Zora', 'Yannick', 'Willi', 'Vito']"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']\n"
+      "['Alex', 'Zora', 'Yannick', 'Willi', 'Vito']\n"
      ]
     }
    ],
@@ -100,10 +100,10 @@
     "namen = [\"Zora\", \"Xenia\", \"Willi\"]\n",
     "namen.append(\"Vito\")\n",
     "namen.insert(1, \"Yannick\")\n",
-    "namen.remove(\"Zora\")\n",
+    "namen.remove(\"Xenia\")\n",
     "namen.insert(0, \"Alex\")\n",
     "\n",
-    "print(namen)  # Erwartete Ausgabe: ['Alex', 'Yannick', 'Xenia', 'Willi', 'Vito']"
+    "print(namen)  # Erwartete Ausgabe: ['Alex', 'Zora', 'Yannick', 'Willi', 'Vito']"
    ]
   }
  ],
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
