--- a/book/live_code.ipynb
+++ b/book/live_code.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "Zum Herunterladen einer Seite, \n",
     "\n",
-    "1. klicke am oberen Rand der auf das Download-Symbol ↓ (in der Nähe der 🚀) \n",
+    "1. klicke am oberen Rand dieser Seite auf das Download-Symbol ↓ (in der Nähe der 🚀) \n",
     "2. wähle das Format `.ipynb` und speichere die Datei ab. \n",
     "3. (Falls die Datei im Browser angezeigt wird, mache stattdessen einen Rechtsklick auf `.ipynb` und wähle im Kontextmenü \"Link speichern unter...\")\n",
     "\n",
